Modified these files to create a simple stock price widget.
Chris Davis
2016-06-06
9:21 PM

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/weather">Weather</a></li>
+    <li><a href="#/stockPrice">Stock Price</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -43,6 +44,7 @@
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="weather/weather.js"></script>
+  <script src="stockPrice/stockPrice.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
