--- a/app/stockPrice/stockPrice.html
+++ b/app/stockPrice/stockPrice.html
@@ -1,9 +1,8 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h2 class="panel-title">Current Jacobs Stock Price</h2>
+<div class="card">
+  <div class="card-header">
+    <h3 class="card-title">Current Jacobs Stock Price</h3>
   </div>
-
-  <div class="panel-body">
+  <div class="card-block">
     <p class="stock-price">Last Quote: {{lastTradePriceOnly}}</p>
   </div>
 </div>
