--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -1,28 +1,40 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
+<div class="row">
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading">
         <h2 class="panel-title">Current Conditions</h2>
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-md-6 text-center">
+            <i ng-class="getIconClass(weather.currently.icon)"></i>
+            <h3>{{weather.currently.summary}}</h3>
+          </div>
+          <div class="col-md-6">
+            <h3>Temperature: {{weather.currently.temperature}}&deg;F</h3>
+            <h3>Humidity: {{weather.currently.humidity*100}}%</h3>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="panel-body">
-        <p class="icon"><i ng-class="getIconClass(weather.currently.icon)"></i></p>
-        <p class="temp">{{weather.currently.temperature}}</p>
-        <p>{{weather.currently.summary}}</p>
-    </div>
-</div>
-
-<div class="panel panel-default">
-    <div class="panel-heading">
+  </div>
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-heading">
         <h2 class="panel-title">Weekly Forecast</h2>
-    </div>
-    <div class="panel-body table-responsive">
+      </div>
+      <div class="panel-body table-responsive">
         <table class="table borderless">
-            <tr>
-                <td class="col-8-equal" ng-repeat="day in weather.daily.data">
-                    <h3>{{day.time * 1000 | date:'EEE'}}</h3>
-                    <p class="icon"><i ng-class="getIconClass(day.icon)"></i></p>
-                    <p><span class="high temp">{{day.temperatureMax}}</span> | <span class="low temp">{{day.temperatureMin}}</span></p>
-                    <p>{{day.summary}}</p>
-                </td>
-            </tr>
+          <tr>
+            <td class="col-8-equal" ng-repeat="day in weather.daily.data | limitTo: 5">
+              <h3>{{day.time * 1000 | date:'EEE'}}</h3>
+              <h3 class="icon"><i ng-class="getIconClass(day.icon)"></i></h3>
+              <h3><span class="high temp">Hi: {{day.temperatureMax}}&deg;F</span><br /><span class="low temp">Lo: {{day.temperatureMin}}&deg;F</span></h3>
+              <h4>{{day.summary}}</h4>
+            </td>
+          </tr>
         </table>
+      </div>
     </div>
+  </div>
 </div>
