Fixed stock history JS code & added view example
Changed the stock price module to ensure two HTTP requests were made to
get the current price and history for a specified date interval.  Added
example HTML markup to demonstrate how to access the array of history
elements.

--- a/app/stockPrice/stockPrice.html
+++ b/app/stockPrice/stockPrice.html
@@ -4,5 +4,9 @@
   </div>
   <div class="card-block">
     <p class="stock-price">Last Quote: {{lastTradePriceOnly}}</p>
+    <div>Last 5 Close Prices:</div>
+    <ul>
+      <li ng-repeat="price in priceHistory | limitTo: 5">{{price.Close}}</li>
+    </ul>
   </div>
 </div>
