I was able to modify the stock price javascript and html to add a graph of the stock price over the last 30 days.
Chris Davis

--- a/app/stockPrice/stockPrice.html
+++ b/app/stockPrice/stockPrice.html
@@ -8,5 +8,7 @@
     <ul>
       <li ng-repeat="price in priceHistory | limitTo: 5">{{price.Close}}</li>
     </ul>
+
+    <canvas id="line" class="chart chart-line" chart-data="historicalclosingprice" chart-labels="historicalclosingdates"></canvas> 
   </div>
 </div>
