Modified stockprice.html to remove the code that was printing out the last 5 days worth of closing stock prices.
Chris Davis

--- a/app/stockPrice/stockPrice.html
+++ b/app/stockPrice/stockPrice.html
@@ -4,11 +4,11 @@
   </div>
   <div class="card-block">
     <p class="stock-price">Last Quote: {{lastTradePriceOnly}}</p>
-    <div>Last 5 Close Prices:</div>
+    <!-- <div>Last 5 Close Prices:</div>
     <ul>
       <li ng-repeat="price in priceHistory | limitTo: 5">{{price.Close}}</li>
-    </ul>
+    </ul> -->
 
-    <canvas id="line" class="chart chart-line" chart-data="historicalclosingprice" chart-labels="historicalclosingdates"></canvas> 
+    <canvas id="line" class="chart chart-line" chart-data="historicalclosingprice" chart-labels="historicalclosingdates"></canvas>
   </div>
 </div>
