--- a/app/weather/current.html
+++ b/app/weather/current.html
@@ -14,6 +14,14 @@
         <h4>Humidity: {{weather.currently.humidity*100}}%</h4>
       </div>
     </div>
+    <div class="row">
+      <h4 class="text-center">Rain Probability for 1 hour</h4>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <canvas id="line" class="chart chart-line" chart-data="rainProbability" chart-labels="minuteCount"></canvas>
+      </div>
+    </div>
   </div>
   </div>
 </div>
