Modified the picture being used to pull from unsplash.com picking from NASA's public pictures on that site.
Chris Davis

--- a/app/picture/picture.html
+++ b/app/picture/picture.html
@@ -1,7 +1,8 @@
 <div class="card">
   <!-- <img class="card-img-top img-fluid img-rounded" data-src="{{imageUrl}}"> -->
-  <img class="card-img-top img-fluid img-rounded" src="picture/jet.jpeg">
+  <div class="card-header"><h3 class="card-title">NASA Image</h3></div>
+  <img class="card-img-top img-fluid img-rounded" src="https://source.unsplash.com/user/nasa/1600x900">
   <div class="card-block">
-    <p class="card-text">This is a fighter jet.  Ain't she pretty?</p>
+    <p class="card-text">This is a NASA image.</p>
   </div>
 </div>
