Fixed angular-chart.js/chart.js script elements

--- a/app/index.html
+++ b/app/index.html
@@ -35,22 +35,21 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-resource/angular-resource.min.js"></script>
-<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/tether/dist/js/tether.min.js"></script>
+<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+<script type="text/javascript" src="bower_components/angular-resource/angular-resource.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="bower_components/tether/dist/js/tether.min.js"></script>
 <!-- <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.min.js"></script>
-<script src="app.js"></script>
-<script src="weather/weather.js"></script>
-<script src="stockPrice/stockPrice.js"></script>
-<script src="picture/picture.js"></script>
-<script src="components/version/version.js"></script>
-<script src="components/version/version-directive.js"></script>
-<script src="components/version/interpolate-filter.js"></script>
-<script src="bower_components/Chart.js/dist/Chart.min.js"></script>
-<script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
+<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="weather/weather.js"></script>
+<script type="text/javascript" src="stockPrice/stockPrice.js"></script>
+<script type="text/javascript" src="picture/picture.js"></script>
+<script type="text/javascript" src="components/version/version.js"></script>
+<script type="text/javascript" src="components/version/version-directive.js"></script>
+<script type="text/javascript" src="components/version/interpolate-filter.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 </body>
 </html>
