--- a/app/picture/picture.html
+++ b/app/picture/picture.html
@@ -1,8 +1,5 @@
 <div class="card">
   <!-- <img class="card-img-top img-fluid img-rounded" data-src="{{imageUrl}}"> -->
-  <div class="card-header"><h3 class="card-title">NASA Image</h3></div>
+  <div class="card-header">NASA Image</div>
   <img class="card-img-top img-fluid img-rounded" src="https://source.unsplash.com/user/nasa/1600x900">
-  <div class="card-block">
-    <p class="card-text">This is a NASA image.</p>
-  </div>
 </div>
