--- a/app/stockPrice/stockPrice.html
+++ b/app/stockPrice/stockPrice.html
@@ -1,7 +1,5 @@
 <div class="card">
-  <div class="card-header">
-    <h3 class="card-title">Current Jacobs Stock Price</h3>
-  </div>
+  <div class="card-header">Current Jacobs Stock Price</div>
   <div class="card-block">
     <p class="stock-price">Last Quote: {{lastTradePriceOnly}}</p>
     <!-- <div>Last 5 Close Prices:</div>
